Hopefully fix scrollbar CSS regression

--- a/src/cm.css
+++ b/src/cm.css
@@ -520,7 +520,7 @@ a:focus {
 
 /** Styles that wrap the text container of the modal content. Excludes footer */
 .inner-container {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 /*******************
